[package]
name = "startrust"
description = ""
version = "0.1.0"
authors = ["Evan Williams <ejw@fig.com>"]
edition = "2018"
readme = "README.md"
repository = "https://bitbucket.org/evanjpw/startrust.git"
categories = []
exclude = ["./.detritus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
beep = "0.2"
dimensioned = "0.6"  # Was 7.0, but it doesn't work with `beep`, to my knowledge
derive_builder = "0.9.0"
rand = "0.8"
num_enum = "0.5.1"
log = "0.4.11"
pretty_env_logger = "0.4"
termcolor ="1.1"
atty = "0.2.14"
clap = "3.0.0-beta.2"
strum = "0.20"
strum_macros = "0.20"

[dependencies.num-traits]
version = "0.2"
default-features = false
